# haskell-nds2

./: .gitignore  LICENSE  README.md  hsnds2.cabal  nds2.cabal  stack.yaml  test.hs
cbits/: buffer_helper.h  test.cc  test_wrapper.cc  wrapper.cc  wrapper.h
examples/: functions.hs
src/Network/: NDS2.hs
src/Network/NDS2/: Conduit.hs  Types.hs
src/Network/NDS2/Internals/: Types.chs  Wrapper.chs
wrapper/: test  test.cc  wrapper.cc  wrapper.h
