name:                hsnds2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hsnds2#readme
license:             BSD3
license-file:        LICENSE
author:              Shaun Ren
maintainer:          shaun.ren@linux.com
copyright:           2018 Shaun Ren
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hsnds2
