name:                hsnds2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hsnds2#readme
license:             BSD3
license-file:        LICENSE
author:              Shaun Ren
maintainer:          shaun.ren@linux.com
copyright:           2018 Shaun Ren
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.NDS2.Internals.Wrapper
  build-depends:       base >= 4.7 && < 5
                     , vector >= 0.12 && < 0.13
  default-language:    Haskell2010
  c-sources:           cbits/wrapper.cc
  include-dirs:        cbits
  cc-options:          -std=c++11
  extra-libraries:     ndsxxwrap
  build-tools:         c2hs


source-repository head
  type:     git
  location: https://github.com/githubuser/hsnds2
