name:                hsnds2
version:             0.1.0.0
synopsis:            NDS2 client
description:         A Haskell wrapper for the NDS2 clientA Haskell wrapper for the NDS2 client
homepage:            https://github.com/githubuser/hsnds2#readme
license:             BSD3
license-file:        LICENSE
author:              Shaun Ren
maintainer:          shaun.ren@linux.com
copyright:           2018 Shaun Ren
category:            Network, Conduit
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.NDS2
                     , Network.NDS2.Types
                     , Network.NDS2.Conduit
  other-modules:       Network.NDS2.Internals.Wrapper
                     , Network.NDS2.Internals.Types
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2 && < 3
                     , vector >= 0.11 && < 0.13
                     , lens >= 4.10 && < 5
                     , data-default >= 0.7 && < 0.8
                     , conduit >= 1.1 && < 1.4
  default-language:    Haskell2010
  extra-libraries:     stdc++
                     , ndsxxwrap
  c-sources:           cbits/wrapper.cc
  include-dirs:        cbits
  cc-options:          -std=c++11
  ghc-options:         -pgmlg++
  build-tools:         c2hs


source-repository head
  type:     git
  location: https://github.com/githubuser/hsnds2
