name:                nds2
version:             0.1.0.0
synopsis:            NDS2 client
description:         A Haskell wrapper for the NDS2 clientA Haskell wrapper for the NDS2 client
homepage:            https://github.com/gw-analysis/haskell-nds2
license:             BSD3
license-file:        LICENSE
author:              Shaun Ren
maintainer:          shaun.ren@linux.com
copyright:           2018 Shaun Ren
category:            Network, Conduit
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag stdcpp0x
  description:
    Use -std=c++0x instead of -std=c++11 when compiling C++ files.
    Useful for compiling with old compilers.
  default: False

library
  hs-source-dirs:      src
  exposed-modules:     Network.NDS2
                     , Network.NDS2.Types
                     , Network.NDS2.Conduit
  other-modules:       Network.NDS2.Internals.Wrapper
                     , Network.NDS2.Internals.Types
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2 && < 3
                     , vector >= 0.11 && < 0.13
                     , lens >= 4.10 && < 5
                     , data-default >= 0.5 && < 1
                     , conduit >= 1.1 && < 1.4
  default-language:    Haskell2010
  extra-libraries:     stdc++
                     , ndsxxwrap
  c-sources:           cbits/wrapper.cc
  include-dirs:        cbits

  if flag(stdcpp0x)
    cc-options:        -O2 -std=c++0x
  else
    cc-options:        -O2 -std=c++11

  ghc-options:         -pgmlg++
  build-tools:         c2hs


source-repository head
  type:     git
  location: https://github.com/gw-analysis/haskell-nds2
